# gabutdm

./: .SRCINFO  .gitignore  PKGBUILD  README.md  com.github.gabutakut.gabutdm.yml  meson.build
.github/: FUNDING.yml
.github/workflows/: aur-publish.yml  main.yml  ppa.yml
data/: com.github.gabutakut.gabutdm.appdata.xml.in  com.github.gabutakut.gabutdm.desktop.in  com.github.gabutakut.gabutdm.startup.desktop.in  meson.build
debian/: changelog  changelog.dch  control  copyright  rules
po/extra/: POTFILES
snap/: snapcraft.yaml
src/: AddHls.vala  AddTorrent.vala  AddUrl.vala  AddYtdlp.vala  AlertView.vala  AppSplash.vala  Application.vala  BTEncrypt.vala  BencodeParser.vala  BencodeValue.vala  BitfieldPaint.vala  CanonicalDbusmenu.vala  ChecksumType.vala  DbusIndicator.vala  DbusStatusWhacher.vala  DbusmenuItem.vala  DeAscending.vala  DeleteDialog.vala  DeleteRow.vala  DownloadRow.vala  Downloader.vala  DownloaderHls.vala  FileAllocation.vala  FileChooser.vala  FileTreeItem.vala  FormatItem.vala  GabutScreen.vala  GabutServer.vala  GabutSucces.vala  GabutWindow.vala  GdmMenu.vala  GdmOutstream.vala  GdmPaint.vala  HLSLBox.vala  HLSRow.vala  HeaderLabel.vala  HlsManBox.vala  HlsOption.vala  KeyAnimOverlay.vala  LoginUser.vala  (+50 more)
vapi/: aria2_wrapper.vapi  ffmpeg_merger.vapi  libavformat.vapi  libcurl.vapi  libqrencode.vapi
