sources = files (
    'Application.vala',
    'Downloader.vala',
    'DownloadRow.vala',
    'GabutWindow.vala',
    'Utils.vala',
    'AlertView.vala',
    'ModeButton.vala',
    'UnityLauncherEntry.vala',
    'Preferences.vala',
    'AddUrl.vala',
    'MediaEntry.vala',
    'SuccesDialog.vala',
    'GabutServer.vala',
    'QrCode.vala',
    'ServerUpload.vala',
    'ServerHome.vala',
    'ServerDM.vala',
    'ServerCss.vala',
    'FileAllocation.vala',
    'ProxyMethod.vala',
    'ChecksumType.vala',
    'BTEncrypt.vala',
    'LoginUser.vala',
    'PieceSelector.vala',
    'UriSelector.vala',
    'ProxyType.vala',
    'CanonicalDbusmenu.vala',
    'DbusmenuItem.vala',
    'ModeTogle.vala',
    'GabutSucces.vala',
    'ServerShare.vala',
    'ServerNotFound.vala',
    'ServerComplete.vala',
    'SortBy.vala',
    'GdmOutstream.vala',
    'DbusIndicator.vala',
    'PeersRow.vala',
    'ServerRow.vala',
    'TorrentRow.vala',
    'GdmPaint.vala',
    'GdmMenu.vala',
    'ProgressPaint.vala',
    'QrcodePaint.vala',
    'OpenMenu.vala',
    'ProxyRecently.vala'
)