cheaders = files(
    'ffmpeg_merger.h',
    'aria2_wrapper.h'
 )

csources = files(
    'ffmpeg_merger.cc',
    'aria2_wrapper.cc'
)

cplus_files = [
    csources,
    cheaders,
]

install_headers(cheaders)
add_languages('cpp')
executable (
    meson.project_name (),
    cplus_files,
    'Application.vala',
    'Downloader.vala',
    'DownloadRow.vala',
    'GabutWindow.vala',
    'Utils.vala',
    'AlertView.vala',
    'ModeButton.vala',
    'UnityLauncherEntry.vala',
    'Preferences.vala',
    'AddUrl.vala',
    'MediaEntry.vala',
    'SuccesDialog.vala',
    'GabutServer.vala',
    'QrCode.vala',
    'ServerUpload.vala',
    'ServerHome.vala',
    'ServerDM.vala',
    'ServerVideo.vala',
    'ServerImage.vala',
    'FileAllocation.vala',
    'ProxyMethod.vala',
    'ChecksumType.vala',
    'BTEncrypt.vala',
    'LoginUser.vala',
    'PieceSelector.vala',
    'UriSelector.vala',
    'ProxyType.vala',
    'CanonicalDbusmenu.vala',
    'DbusmenuItem.vala',
    'ModeTogle.vala',
    'GabutSucces.vala',
    'ServerShare.vala',
    'ServerNotFound.vala',
    'ServerComplete.vala',
    'SortBy.vala',
    'DbusIndicator.vala',
    'PeersRow.vala',
    'RowServer.vala',
    'GdmPaint.vala',
    'GdmMenu.vala',
    'ProgressPaint.vala',
    'QrcodePaint.vala',
    'OpenMenu.vala',
    'DeleteDialog.vala',
    'DeleteRow.vala',
    'ProxyRecently.vala',
    'BitfieldPaint.vala',
    'TrFileInfo.vala',
    'BencodeValue.vala',
    'BencodeParser.vala',
    'TorrentInfo.vala',
    'TorrentParser.vala',
    'FileTreeItem.vala',
    'AddTorrent.vala',
    'SegmentDownloader.vala',
    'ModeItem.vala',
    'AddHls.vala',
    'HLSRow.vala',
    'HLSLBox.vala',
    'HlsOption.vala',
    'DownloaderHls.vala',
    'HlsManBox.vala',
    'DbusStatusWhacher.vala',
    'ServerText.vala',
    'ServerPdf.vala',
    'ServerTorrent.vala',
    'ServerWord.vala',
    'ServerExcel.vala',
    'ServerArchive.vala',
    'ServerAudio.vala',
    'ServerPPoint.vala',
    'ServerLogin.vala',
    'AppSplash.vala',
    'GabutScreen.vala',
    'KeyAnimOverlay.vala',
    'AddYtdlp.vala',
    'FormatItem.vala',
    dependencies: dependencies,
    cpp_args: ['-std=c++17'],
    link_args: ['-lm', '-lstdc++'],
    install: true
)